@@ -15,6 +15,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ClientVendorServiceImpl implements ClientVendorService {
@@ -45,7 +46,7 @@ public class ClientVendorServiceImpl implements ClientVendorService {
         List<ClientVendor> clientVendorList = clientVendorRepository.findAllByCompanyId(getLoggedInCompany().getId());
         return clientVendorList.stream()
                 .map(clientVendor -> mapperUtil.convert(clientVendor, new ClientVendorDTO()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
